# pyntropy

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: app_logger.py  config.py  main.py  seed.py
app/SQL/DDL_migrations/: 001_create_domains_table.sql  002_create_modules_table.sql  003_create_steps_table.sql
app/SQL/DML_migrations/: 001_insert_domains.sql  002_insert_modules_redis.sql  003_insert_into_steps_redis.sql
app/content/fastapi_basics/: step_01.md
app/database/: __init__.py  connection.py
app/domain/: __init__.py  module.py  step.py
app/models/: __init__.py  breadcrumbs.py  module.py  step.py
app/repositories/: __init__.py  modules_repository.py
app/repository/: __init__.py
app/repository/content/: steps_repository.py
app/routers/: main.py
app/routers/content/: modules.py  steps.py
app/routes/: __init__.py
app/routes/content/: modules.py  steps.py
app/services/: __init__.py  modules_service.py  steps_service.py
app/settings/: __init__.py  config.py  database_config.py  logging_config.py
app/static/css/: code.css  style.css
app/templates/: 404.html  base.html  index.html  step.html
app/templates/components/: breadcrumbs.html
app/templates/steps/: step.html
app/web/: __init__.py  dependencies.py  router.py
app/web/base/: routes.py
app/web/modules/: routes.py
app/web/routers/: modules.py  root.py  steps.py
app/web/steps/: routes.py
docs/db/: domain.md  modules.md  steps.md
docs/main/: definitions.md
docs/ui/: step_page.md
(+5 files in other folders)
