[project]
name = "pyntropy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "markdown2>=2.5.4",
    "psycopg>=3.3.2",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]
